--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 GEMINI_API_KEY=''
-MODEL_NAME='gemini-1.5-pro-002'
 
+MODEL_NAME='gemini-1.5-pro-002'
+QUERY_CLASIFIER_MODEL=''
 
 BACKEND_URL=''
 FRONTEND_URL=''
