--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 *.env
-/__pycache__
+/gemini_model\cache\__pycache__
 /intelemi_translator_env
 /intelemi_translator_venv
 */.gradio
@@ -8,3 +8,4 @@
 *chat_history.json
 */history/__pycache__
 *.json
+*.pyc
