--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,18 @@
 *.env
-/gemini_model\cache\__pycache__
+*/cache/__pycache__/
 /intelemi_translator_env
 /intelemi_translator_venv
 */.gradio
-*/__pycache__
+*/__pycache__/
 *\gemini_model\cache\cache_registry.json
 *chat_history.json
-*/history/__pycache__
+*/history/__pycache__/
+*/cache/__pycache__/
+*/media/__pycache__/
 *.json
 *.pyc
+*/data/__pycache__/
+gemini_model/cache/cache_registry.json
+gemini_model/__pycache__/__init__.cpython-312.pyc
+gemini_model/__pycache__/model.cpython-312.pyc
+gemini_model/cache/__pycache__/cache.cpython-312.pyc
